--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     border-radius: 30px;
     width: 80vw;
     max-width: 420px;
+    min-width: 375px;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     color: #FFFFFF;
